[package]
name = "hotel_front"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = {version = "0.13.1", features = ["tokio"] }
jsonwebtoken = "9.3.0"
regex = "1.11.1"
reqwest = {version = "0.12.12", features = ["json"]}
serde = {version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
